<resources>
    <string name="app_name">G Remote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="select_device">Select Device: </string>

    <string name="relay_num">Relay No: </string>
    <string name="btn_name">Button Name: </string>
    <string name="btn_on">Button ON: </string>
    <string name="btn_off">Button OFF: </string>
    <string-array name="relay_no">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>

    </string-array>
</resources>
