<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:context="app.device.com.hardwareapp.Fragment.AddButton">


   <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".4"
        android:layout_height="0dp">
       <android.support.v7.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_margin="4dp"
           android:clickable="true"
           android:clipChildren="false"
           android:clipToPadding="false"
           android:divider="@android:color/transparent"
           android:dividerHeight="0.0px"
           android:focusable="true"
           android:padding="90dp"
           app:cardCornerRadius="5dp"
           app:cardElevation="10dp"
           app:cardBackgroundColor="@color/colorAccent"
           app:cardPreventCornerOverlap="false">


           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:gravity="center">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="Add Button"
                   android:textColor="@color/colorWhite"
                   android:textSize="18sp" />

           </LinearLayout>
       </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_marginTop="8dp"
        android:layout_height="0dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:focusable="true"
            android:padding="90dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/select_device"
                            >
                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_device_add_btn"
                            android:layout_gravity="center_vertical"
                            android:layout_width="150dp"
                            app:ms_text_color="#FFFF"
                            app:ms_background_color="@color/colorPrimary"
                            android:layout_height="35dp"/>

                    </LinearLayout>

                </LinearLayout>

                <!--second-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/relay_num"
                            >

                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spiner_relay_add_btn"
                            android:layout_gravity="center_vertical"
                            android:layout_width="70dp"
                            app:ms_text_color="#FFFF"
                            app:ms_background_color="@color/colorPrimary"
                            android:layout_height="35dp"/>

                    </LinearLayout>

                </LinearLayout>

                <!--end second-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/btn_name"
                            >
                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_marginEnd="16dp"
                            android:background="@drawable/edittext_background"
                            android:inputType="text"
                            android:id="@+id/add_button_btn_name"
                            android:singleLine="true"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:layout_height="35dp" />

                    </LinearLayout>

                </LinearLayout>
<!--end of third-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_on"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                       android:layout_marginStart="8dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:hint="Button Code"
                            android:id="@+id/add_button_on_code"
                            android:textSize="17sp"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <!--end of textinput-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="vertical"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_off"
                        />

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_height="wrap_content">
                        <EditText
                            android:layout_width="match_parent"
                            android:hint="Button Code"
                            android:textSize="17sp"
                            android:id="@+id/add_button_off_code"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!--end of input-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:layout_marginStart="8dp"
                        android:text="Button Type: "
                        />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:id="@+id/add_button_radio"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Light"
                            />

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="Fan"
                            />
                    </RadioGroup>
                </LinearLayout>


                <!--end of input section -->

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_button_btn"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginEnd="30dp"
                    android:text="Done"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="0dp">




    </LinearLayout>



</LinearLayout>
