<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="8dp"
    tools:context="app.device.com.hardwareapp.Fragment.ScheduleTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".4"
        android:layout_height="0dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:focusable="true"
            android:padding="90dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardPreventCornerOverlap="false">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Schedule Task"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="4"
        android:layout_marginTop="8dp"
        android:layout_height="0dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            android:clickable="true"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            android:focusable="true"
            android:padding="90dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_margin="5dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/select_device"
                            >
                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_device"
                            android:layout_gravity="center_vertical"
                            android:layout_width="150dp"
                            app:ms_text_color="#FFFF"
                            app:ms_background_color="@color/colorPrimary"
                            android:layout_height="35dp"/>

                    </LinearLayout>

                </LinearLayout>

                <!--second-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">

                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/relay_num"
                            >

                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start"
                        android:layout_height="match_parent">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spiner_relay"
                            android:layout_gravity="center_vertical"
                            android:layout_width="70dp"
                            app:ms_text_color="#FFFF"
                            app:ms_background_color="@color/colorPrimary"
                            android:layout_height="35dp"/>

                    </LinearLayout>

                </LinearLayout>

                <!--end second-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_margin="8dp"
                            android:text="@string/btn_name"
                            >
                        </TextView>

                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/edittext_background"
                            android:inputType="text"
                            android:singleLine="true"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:layout_height="35dp" />

                    </LinearLayout>

                </LinearLayout>
                <!--end of third-->


                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_marginStart="8dp"
                            android:text="Action : "
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:gravity="start"
                        android:layout_weight="1.5"
                        android:layout_height="match_parent">


                        <RadioGroup
                            android:layout_width="match_parent"
                            android:orientation="horizontal"
                            android:layout_height="wrap_content">
                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:text="ON"
                                />

                            <RadioButton
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="16dp"
                                android:text="OFF"
                                />
                        </RadioGroup>
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="start|center_vertical"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="17sp"
                            android:layout_marginStart="8dp"
                            android:text="Date Time: "
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1.5"
                        android:layout_height="match_parent">
                        <EditText
                            android:id="@+id/schedule_datetime_picker"
                            android:layout_width="match_parent"
                            android:layout_marginEnd="8dp"
                            android:background="@drawable/edittext_background"
                            android:inputType="text"
                            android:hint="Insert Date Time"
                            android:singleLine="true"
                            android:focusable="false"
                            android:paddingStart="5dp"
                            android:gravity="center"
                            android:paddingEnd="5dp"
                            android:textSize="14sp"
                            android:layout_height="35dp" />
                    </LinearLayout>
                </LinearLayout>

                <!--end of input section -->

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorWhite"
                    android:layout_marginEnd="30dp"
                    android:text="Done"
                    android:background="@color/colorAccent"
                    />
            </LinearLayout>


        </android.support.v7.widget.CardView>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight=".5"
        android:layout_height="0dp">




    </LinearLayout>



</LinearLayout>
